Fixing toggle button alignment issue in quick-toggle

--- a/web/themes/new_weather_theme/assets/sass/components/quick-forecast-toggle.scss
+++ b/web/themes/new_weather_theme/assets/sass/components/quick-forecast-toggle.scss
@@ -13,6 +13,7 @@
   & > button {
     border: none;
     outline: none;
+    align-items: center;
   }
 
   position: relative;
